# fastapi-rag

./: .gitignore  CLAUDE.md  requirements.txt
app/: main.py
app/api/: __init__.py
app/config/: __init__.py  api_keys.py
backend/: .env.example  pyproject.toml  pyrightconfig.json  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  conversations.py  documents.py  images.py  ingest.py  query.py  users.py
backend/app/config/: __init__.py  api_keys.py  settings.py
backend/app/db/: __init__.py  connection.py  indexes.py
backend/app/models/: auth.py  chunk.py  conversation.py  document.py  query.py  session.py  user.py
backend/app/services/: auth_session_service.py  avatar_service.py  conversation_service.py  document_service.py  ingest_service.py  oauth.py  orchestrator_service.py  query_service.py  rate_limit.py  router_service.py  security.py  session_service.py  user_service.py  web_search_client.py
backend/app/services/agents/: __init__.py  base.py  general_agent.py  rag_agent.py  registry.py  web_agent.py
backend/tests/: conftest.py  test_auth_routes.py  test_auth_session_service.py  test_conversation_routes.py  test_conversation_service.py  test_oauth_user.py  test_orchestrator_service.py  test_query_agent_routes.py  test_router_service.py  test_security.py  test_session_service.py  test_web_agent.py  test_web_search_client.py
webapp/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
webapp/src/: App.jsx  index.css  routes.jsx
webapp/src/api/: auth.js  (+8 more)
(+114 files in other folders)
